--- a/src/components/CourseGoals/CourseInput/CourseInput.module.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.module.css
@@ -22,3 +22,10 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+.invalid label{
+  color: red;
+}
+.invalid input{
+  border-color: red;
+  background-color: salmon;
+}
